--- a/style.css
+++ b/style.css
@@ -832,6 +832,7 @@ p.meta {
   display: block;
   position: relative;
   width: 100%;
+  z-index: 99;
 }
 .master-search .search-icon {
   display: block;
@@ -972,8 +973,9 @@ p.meta {
   display: block;
   position: absolute;
   z-index: -1;
-  height: auto;
+  height: 100%;
   width: 100%;
+  overflow: hidden;
   top: 0;
   left: 0;
 }
@@ -1023,6 +1025,13 @@ p.meta {
 }
 .featured-speeches .featured-item:hover .full-title {
   display: block;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .featured-speeches .featured-item .feature-image img {
+    height: 100%;
+    width: auto;
+    max-width: none;
+  }
 }
 @media (max-width: 767px) {
   .hero-feature .feature-caption .cap-title {
